--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 .property h2{
-    /*font-size: 3em;*/
+    font-size: 1.5em;
     display: inline-block;
 }
 .property span{
@@ -35,7 +35,9 @@
 }
 
 #inventory{
-    font-size: 1.5em;
+    font-size: 1em;
+    border-radius: 100px;
+    background-color: brown;
 }
 
 #inventory-menu{
@@ -63,7 +65,6 @@
 
 .image-container{
     float:right;
-    padding-top: 10px;
 }
 
 #weapon-image{
@@ -72,4 +73,40 @@
 
 #weapon-equipped-property{
     margin-right: 0
+}
+
+/* Fight Window */
+.modal {
+  /*display: none;*/
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal-content {
+  background-color: #F0E4AA;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 100%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
